force-app/main/default/objects/KB_Global_Search_History__c/KB_Global_Search_History__c.object-meta.xml
<CustomObject>
    <label>KB Global Search History</label>
    <nameField>
        <label>KB Global Search History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>