force-app/main/default/objects/KB_Global_Search_History__c/fields/Apex_BatchId__c.field-meta.xml
<CustomField>
    <fullName>Apex_BatchId__c</fullName>
    <label>Apex Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>