force-app/main/default/objects/KB_Global_Search_History__c/fields/Apex_Replacement_BatchId__c.field-meta.xml
<CustomField>
    <fullName>Apex_Replacement_BatchId__c</fullName>
    <label>Apex Replacement Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>