force-app/main/default/objects/KB_Global_Search_History__c/fields/Articles_Searched__c.field-meta.xml
<CustomField>
    <fullName>Articles_Searched__c</fullName>
    <label>Articles Searched</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>