force-app/main/default/objects/KB_Global_Search_History__c/fields/Articles_Updated__c.field-meta.xml
<CustomField>
    <fullName>Articles_Updated__c</fullName>
    <label>Articles Updated</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>