force-app/main/default/objects/KB_Global_Search_History__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <length>64</length>
    <type>Text</type>
</CustomField>