force-app/main/default/objects/KB_Global_Search_History__c/fields/Replacement_String__c.field-meta.xml
<CustomField>
    <fullName>Replacement_String__c</fullName>
    <label>Replacement String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>