force-app/main/default/objects/KB_Global_Search_History__c/fields/Search_String__c.field-meta.xml
<CustomField>
    <fullName>Search_String__c</fullName>
    <label>Search String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>