force-app/main/default/objects/KB_Global_Search_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Article_Type__c</columns>
    <columns>PublishStatus__c</columns>
    <columns>Field_Names__c</columns>
    <columns>Search_String__c</columns>
    <columns>Replacement_String__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>